--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 typings
 app/**/*.js
+!app/**/gentelella.custom.js
 app/**/*.map
 node_modules
 jspm_packages
 bower_components
+!node_modules/gentelella/**/*
