--- a/imem/package.json
+++ b/imem/package.json
@@ -21,7 +21,10 @@
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
+    "@types/jquery": "^2.0.39",
     "core-js": "^2.4.1",
+    "gentelella": "^1.3.0",
+    "jquery": "^3.1.1",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2"
