--- a/imem/package.json
+++ b/imem/package.json
@@ -21,10 +21,14 @@
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
+    "@types/gapi": "0.0.30",
+    "@types/gapi.auth2": "0.0.33",
     "@types/jquery": "^2.0.39",
     "core-js": "^2.4.1",
     "gentelella": "^1.3.0",
+    "install": "^0.8.7",
     "jquery": "^3.1.1",
+    "npm": "^4.2.0",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2"
