--- a/imem/package.json
+++ b/imem/package.json
@@ -24,6 +24,7 @@
     "@types/gapi": "0.0.30",
     "@types/gapi.auth2": "0.0.33",
     "@types/jquery": "^2.0.39",
+    "angular-2-data-table": "^0.1.2",
     "core-js": "^2.4.1",
     "gentelella": "^1.3.0",
     "install": "^0.8.7",
