--- a/imem/package.json
+++ b/imem/package.json
@@ -29,6 +29,8 @@
     "gentelella": "^1.3.0",
     "install": "^0.8.7",
     "jquery": "^3.1.1",
+    "ng2-bootstrap": "^1.3.3",
+    "ng2-table": "^1.3.2",
     "npm": "^4.2.0",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
