--- a/imem/package.json
+++ b/imem/package.json
@@ -21,8 +21,6 @@
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
-    "@types/gapi": "0.0.30",
-    "@types/gapi.auth2": "0.0.33",
     "@types/jquery": "^2.0.39",
     "angular-2-data-table": "^0.1.2",
     "core-js": "^2.4.1",
@@ -30,6 +28,7 @@
     "install": "^0.8.7",
     "jquery": "^3.1.1",
     "ng2-bootstrap": "^1.3.3",
+    "ng2-datepicker": "^1.8.0",
     "ng2-table": "^1.3.2",
     "npm": "^4.2.0",
     "rxjs": "^5.0.1",
