--- a/imem/package.json
+++ b/imem/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^3.3.1",
     "@types/jquery": "^2.0.39",
     "angular-2-data-table": "^0.1.2",
+    "angular2-modal": "^2.0.3",
     "core-js": "^2.4.1",
     "gentelella": "^1.3.0",
     "install": "^0.8.7",
