--- a/imem/package.json
+++ b/imem/package.json
@@ -25,11 +25,13 @@
     "angular-2-data-table": "^0.1.2",
     "angular2-froala-wysiwyg": "^2.5.0-1",
     "angular2-modal": "^2.0.3",
+    "chart.js": "^2.5.0",
     "core-js": "^2.4.1",
     "gentelella": "^1.3.0",
     "install": "^0.8.7",
     "jquery": "^3.1.1",
     "ng2-bootstrap": "^1.3.3",
+    "ng2-charts": "^1.5.0",
     "ng2-datepicker": "^1.8.0",
     "ng2-table": "^1.3.2",
     "npm": "^4.2.0",
