--- a/imem/package.json
+++ b/imem/package.json
@@ -13,15 +13,18 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^4.0.0",
     "@angular/cli": "^1.0.0-rc.2",
-    "@angular/common": "^2.4.10",
-    "@angular/compiler": "^2.4.10",
-    "@angular/core": "^2.4.10",
-    "@angular/forms": "^2.4.10",
-    "@angular/http": "^2.4.10",
-    "@angular/platform-browser": "^2.4.10",
-    "@angular/platform-browser-dynamic": "^2.4.10",
-    "@angular/router": "^3.4.10",
+    "@angular/common": "^4.0.0",
+    "@angular/compiler": "^4.0.0",
+    "@angular/compiler-cli": "^4.0.0",
+    "@angular/core": "^4.0.0",
+    "@angular/forms": "^4.0.0",
+    "@angular/http": "^4.0.0",
+    "@angular/platform-browser": "^4.0.0",
+    "@angular/platform-browser-dynamic": "^4.0.0",
+    "@angular/platform-server": "^4.0.0",
+    "@angular/router": "^4.0.0",
     "@types/jquery": "^2.0.41",
     "angular2-froala-wysiwyg": "^2.5.1-1",
     "core-js": "^2.4.1",
@@ -32,6 +35,7 @@
     "primeng": "^2.0.4",
     "rxjs": "^5.2.0",
     "ts-helpers": "^1.1.2",
+    "typescript": "^2.2.1",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
