--- a/imem/package.json
+++ b/imem/package.json
@@ -14,7 +14,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^4.0.0",
-    "@angular/cli": "^1.0.0-rc.2",
+    "@angular/cli": "^1.0.0",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
     "@angular/compiler-cli": "^4.0.0",
@@ -30,20 +30,20 @@
     "core-js": "^2.4.1",
     "gentelella": "^1.3.0",
     "install": "^0.8.7",
-    "jquery": "^3.2.0",
-    "npm": "^4.4.1",
-    "primeng": "^2.0.4",
+    "jquery": "^3.2.1",
+    "npm": "^4.4.4",
+    "primeng": "^4.0.0-rc.1",
     "rxjs": "^5.2.0",
     "ts-helpers": "^1.1.2",
     "typescript": "^2.2.1",
-    "zone.js": "^0.8.4"
+    "zone.js": "^0.8.5"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^2.4.10",
+    "@angular/compiler-cli": "^4.0.0",
     "@types/jasmine": "2.5.46",
-    "@types/node": "^7.0.8",
+    "@types/node": "^7.0.11",
     "angular-cli": "1.0.0-beta.28.3",
-    "codelyzer": "~3.0.0-beta.3",
+    "codelyzer": "~3.0.0-beta.4",
     "extract-text-webpack-plugin": "^2.1.0",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "3.2.0",
@@ -53,8 +53,8 @@
     "karma-jasmine": "^1.1.0",
     "karma-remap-istanbul": "^0.6.0",
     "protractor": "~5.1.1",
-    "ts-node": "2.1.0",
+    "ts-node": "3.0.2",
     "tslint": "^4.5.1",
-    "typescript": "2.2.1"
+    "typescript": "2.2.2"
   }
 }
